@@ -333,7 +333,7 @@ carray methods
         The copy of this object.
 
 
-  .. py:method:: iter(start=0, stop=None, step=1, limit=None)
+  .. py:method:: iter(start=0, stop=None, step=1, limit=None, skip=0)
 
     Iterator with `start`, `stop` and `step` bounds.
 
@@ -348,6 +348,8 @@ carray methods
       limit : int
         A maximum number of elements to return.  The default is return
         everything.
+      skip : int
+        An initial number of elements to skip.  The default is 0.
 
     Returns:
       out : iterator
@@ -406,7 +408,7 @@ carray methods
     See Also:
       :py:meth:`append`
 
-  .. py:method:: where(boolarr, limit=None)
+  .. py:method:: where(boolarr, limit=None, skip=0)
 
     Iterator that returns values of this object where `boolarr` is true.
 
@@ -415,6 +417,8 @@ carray methods
       limit : int
         A maximum number of elements to return.  The default is return
         everything.
+      skip : int
+        An initial number of elements to skip.  The default is 0.
 
     Returns:
       out : iterator
@@ -422,7 +426,7 @@ carray methods
     See Also:
       :py:meth:`iter`, :py:meth:`wheretrue`
 
-  .. py:method:: wheretrue(limit=None)
+  .. py:method:: wheretrue(limit=None, skip=0)
 
     Iterator that returns indices where this object is true.  Only useful for
     boolean carrays.
@@ -431,6 +435,8 @@ carray methods
       limit : int
         A maximum number of elements to return.  The default is return
         everything.
+      skip : int
+        An initial number of elements to skip.  The default is 0.
 
     Returns:
       out : iterator
@@ -636,7 +642,7 @@ ctable methods
       :py:func:`eval` (first level function)
 
 
-  .. py:method:: iter(start=0, stop=None, step=1, outcols=None, limit=None)
+  .. py:method:: iter(start=0, stop=None, step=1, outcols=None, limit=None, skip=0)
 
     Iterator with `start`, `stop` and `step` bounds.
 
@@ -657,6 +663,8 @@ ctable methods
       limit : int
         A maximum number of elements to return.  The default is return
         everything.
+      skip : int
+        An initial number of elements to skip.  The default is 0.
 
     Returns:
       out : iterable
@@ -688,7 +696,7 @@ ctable methods
       :py:meth:`ctable.append`
 
 
-  .. py:method:: where(expression, outcols=None, limit=None)
+  .. py:method:: where(expression, outcols=None, limit=None, skip=0)
 
     Iterate over rows where `expression` is true.
 
@@ -704,6 +712,8 @@ ctable methods
       limit : int
         A maximum number of elements to return.  The default is return
         everything.
+      skip : int
+        An initial number of elements to skip.  The default is 0.
 
     Returns:
       out : iterable
